<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.ascstb.mygympassion.presentation.LoginViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/loading_layout"
            app:loading="@{viewModel.loading}" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/Header4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_title"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/tvSlogan"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSlogan"
            style="@style/Header4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_slogan"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/tvLoginTitle"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome" />

        <TextView
            android:id="@+id/tvLoginTitle"
            style="@style/Header2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/etEmail"
            app:layout_constraintTop_toBottomOf="@id/tvSlogan" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints="email"
            android:focusedByDefault="true"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/tvSlogan" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            app:layout_constraintBottom_toTopOf="@id/viewBottom"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />

        <View
            android:id="@+id/viewBottom"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>